2002-09-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: add trapping and cleaning up routine.

	* pbuilder-modules: modify things shuffling around until it works...

	* pbuilder-user-mode-linux (BUILDING_DSC_FILE): add call to pbuilder update.

	* pbuilder-updatebuildenv: check for INTERNAL_BUILD_UML and ignore the 
	basetgz creation in UML.

	* pbuilder-modules: remove invocation of hostname from uml.

	* debian/control (Depends): require 1.31.1 or greater of debianutils for readlink

	* Makefile (install): add pbuilder-user-mode-linux to install target

	* debian/control (Depends): add depends on debianutils, for readlink

	* pbuilder-user-mode-linux (BUILDING_DSC_FILE): use --internal-build-uml

	* pbuilder-modules (extractbuildplace): change to do less things 
	when INTERNAL_BUILD_UML is specified.
	(cleanbuildplace): add check for INTERNAL_BUILD_UML

	* pbuilder-checkparams (--internal-build-uml): new option.

	* Makefile (install): add pbuilder-buildpackage-funcs to install target

	* pbuilder-buildpackage (PACKAGENAME): add id tag for calling showbuildbanner

	* pbuilder-buildpackage-funcs: create new file
	add banner opt for showbuildbanner

	* pbuilder-buildpackage: move funcs to /usr/lib/pbuilder/pbuilder-buildpackage-funcs

2002-09-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: experimental file.

2002-09-13  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams (CHROOTEXEC): add --internal-chrootexec option to set CHROOTEXEC variable.

	* pbuilder-createbuildenv: remove def for CHROOTEXEC
	* pbuilder-updatebuildenv: ditto

	* pbuilder-checkparams (CHROOTEXEC): CHROOTEXEC is set in checkparams, instead of -buildpackage etc.

2002-09-09  Junichi Uekawa  <dancer@debian.org>

	* AUTHORS: add notes on devfs support.

	* pbuilder-modules: add devfs support
	Thanks to: "Dagfinn Ilmari Manns?er" <ilmari@ping.uio.no>

	* pbuilderrc (USEDEVFS): change default value on USEDEVFS
