@@ -1,5 +1,6 @@
 files
 pbuilder
+pbuilder-uml
 pbuilder.postinst.debhelper
 pbuilder.prerm.debhelper
 postinst.debhelper
