@@ -3,8 +3,9 @@ pbuilder (0.38) unstable; urgency=low
   * Not yet released
   * user-mode-linux support. (closes: #116117)
     This is not yet a completely working solution, experiment!
+  * create pbuilder-uml package.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 16 Sep 2002 15:48:16 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Mon, 16 Sep 2002 16:28:09 +0900
 
 pbuilder (0.37) unstable; urgency=low
 
