@@ -1,5 +1,11 @@
 2002-09-16  Junichi Uekawa  <dancer@debian.org>
 
+	* debian/pbuilder-user-mode-linux.files: create file. Move pbuilder-user-mode-linux
+
+	* debian/rules: move the thing from binary-arch to binary-indep
+
+	* debian/control (Depends): update depends of debootstrap to 0.1.17.9
+
 	* pbuilder-user-mode-linux: add trapping and cleaning up routine.
 
 	* pbuilder-modules: modify things shuffling around until it works...
